--- a/src/styles.css
+++ b/src/styles.css
@@ -49,7 +49,7 @@ h1 {
 }
 .units a {
   text-decoration: none;
-  color: #000;
+  /* color: #000; */
 }
 .weather-pattern {
   list-style: none;
@@ -74,10 +74,9 @@ h1 {
   text-decoration: none;
 }
 .units .active {
-  color: rgb(16, 157, 238);
-  cursor: default;
+  color: #000;
 }
 .units .active:hover {
-  /* color: #000; */
+  /* color: rgb(16, 157, 238); */
   cursor: default;
 }
