--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
     backdrop-filter: blur(5px);
 }
 .search {
-    margin: 10px auto;
+    margin: 15px auto;
 }
 .search-city {
     padding: 6px 2px;
@@ -24,11 +24,15 @@ body {
     background-color: transparent;
     border: 1px solid #000;
     border-radius: 5px;
+    outline-offset: 0;
 }
 .search-city::placeholder {
     text-align: left;
     padding-left: 2px;
     color: rgb(37, 37, 37);
+}
+.search-city:focus-visible {
+    outline: #000 solid 1px;
 }
 .search-btn {
     line-height: normal;
